src/components/App.css
h1 {
  font-size: 3.5em;
  font-weight: 800;
  text-align: center;
  margin-bottom: -2%;
  background: linear-gradient(90deg,#e0f4fb, #fff7cc, #ffebcc);
  background-size: 100%;
  background-clip: text;
  -webkit-background-clip: text;
  -moz-background-clip: text;
  -webkit-text-fill-color: transparent; 
  -moz-text-fill-color: transparent;
}

h2 {
  text-align: center;
  font-size: 3em;
  font-weight: 800;
  background: linear-gradient(90deg,#B3D4DD, #DDD498, #E3AA56);
  background-size: 100%;
  background-clip: text;
  -webkit-background-clip: text;
  -moz-background-clip: text;
  -webkit-text-fill-color: transparent; 
  -moz-text-fill-color: transparent;
}

a {
  color: #FFFFFF;
  text-decoration: none;
}

nav a:hover{
  cursor: pointer;
}

/* HOME PAGE */
.Home {
  background-image: url("/src/imgs/gradientbg.png");
  background-attachment: fixed;
  background-position: center;
  background-size: cover;
  background-repeat: no-repeat;
  display: flex;
  flex-direction: column;
  text-align: center;
  min-height: 100vh;
  display: flex;
  flex-direction: column;
  align-items: center;
  justify-content: center;
  font-size: calc(10px + 2vmin);
  color: white;
}

/* Nav bar */
nav {
  font-size: 0.7em;
  color: #FFFFFF;
  padding-top: 50px;
}
nav a {
  margin: 0px 1em 0px 1em;
}

/* Home page */
.Home-header {
  margin-top: -70px;
  min-height: 100vh;
  display: flex;
  flex-direction: column;
  align-items: center;
  justify-content: center;
}

/* Home page Buttons */
.homeButton {
  font-size: 0.7em;
  font-weight: 600;
  color: #FFFFFF;
  cursor: pointer;
  margin: 16px 6px 0 6px;
  padding: 1.5% 1.5%;
  border: 10px;
  border-radius: 10px;
  background-color: #73A57F;
}

.homeButton:hover {
  cursor: pointer;
  box-shadow: 0 5px 15px #FFFFFF;
}

.buttonsSidebyside {
  display: flex;
  flex-direction: row;
}

/* CART.js */
.cart {
  background-color: #373737;
  display: flex;
  flex-direction: column;
  margin: 0 10% 0 10%;
}

.container {
  display: flex;
  flex-direction: column;
  align-items: center;
}

.cartList .header input {
  font-size: 1em;
  border: 10px solid #FFFFFF;
  border-radius: 5px;
  width: 60%;
}
.cartList .header button {
  width: 25%;
  padding: 12px;
  font-size: 1em;
  margin: 10px;
  margin-right: 0px;
  border-radius: 5px;
  background-color: #73A57F;
  border: 1px solid #73A57F;
  color: #FFFFFF;
}
.cartList .header button:hover {
  cursor: pointer;
}
.cartList .theList {
  list-style: none;
  padding-left: 0;
  width: 98%;
} 
.cartList .theList li {
  color: #373737;
  background-color: rgba(255, 255, 255, 0.5);
  padding: 15px;
  margin-bottom: 15px;
  border-radius: 5px;
  list-style: none;
}
ul.cartList {
  padding: 0;
}

.cartButton {
  font-size: 1em;
  font-weight: 600;
  color: #FFFFFF;
  cursor: pointer;
  margin: 16px 6px 0 6px;
  padding: 1.5% 1.5%;
  border: 10px;
  border-radius: 10px;
  background-color: #73A57F;
}

.homeButton:hover {
  cursor: pointer;
  box-shadow: 0 5px 15px #FFFFFF;
}








/* 
.App-logo {
  height: 40vmin;
  pointer-events: none;
}
*/

/* 
@media (prefers-reduced-motion: no-preference) {
  .App-logo {
    animation: App-logo-spin infinite 20s linear;
  }
}
*/

/*
@keyframes App-logo-spin {
  from {
    transform: rotate(0deg);
  }
  to {
    transform: rotate(360deg);
  }
}
*/

